--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,10 @@
+@import url('./css/Header.css');
+@import url('./css/Footer.css');
+@import url('./css/Profile.css');
+@import url('./css/NotFound.css');
+@import url('./css/MainContent.css');
+@import url('./css/TweetContent.css');
+@import url('./css/ActionsContent.css');
 @import url('https://fonts.googleapis.com/css2?family=Itim&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap');
 
@@ -11,6 +18,10 @@ html {
   font-family: 'Poppins', sans-serif;
 }
 
+body {
+  background: #161626;
+}
+
 h1, h2, h3, h4, h5 {
   font-family: 'Itim', cursive;
 }
@@ -19,9 +30,17 @@ a {
   text-decoration: none;
 }
 
+ul {
+  list-style: none;
+}
+
+i {
+  font-size: 1.4rem;
+}
+
 .app {
-  width: 200px;
-  height: 200px;
+  width: 400px;
+  max-height: 400px;
   
   display: flex;
   flex-direction: column;
@@ -29,54 +48,8 @@ a {
 
   text-align: center;
 
-  padding: 1rem 1.4rem;
+  padding: 0 1.4rem;
   border-radius: 6px;
-
-  color: white;
-  background: #161626;
-}
-
-.description {
-  display: flex;
-  flex-direction: column;
-  gap: 0.7rem;
-}
-
-.description h1 {
-  font-size: 1.6rem;
-}
-
-.description p {
-  font-size: 1rem;
-}
-
-.btn__quotes {
-  width: 100%;
-  font-size: 1.4rem;
-  padding: 0.5rem 1rem;
-
-
-  border: none;
-  outline: none;
-  border-radius: 6px;
-
-  transition: all 0.4s;
-
-  color: white;
-  background: #2c2250;
-}
-
-.btn__quotes:hover {
-  cursor: pointer;
-  background: #443592;
-}
-
-.btn__github {
-  display: flex;
-  align-self: flex-end;
-
-  font-size: 0.8rem;
-  font-style: italic;
 
   color: white;
 }
