--- a/src/style.css
+++ b/src/style.css
@@ -5,6 +5,7 @@
 @import url('./css/MainContent.css');
 @import url('./css/TweetContent.css');
 @import url('./css/ActionsContent.css');
+@import url('./css/InterationContent.css');
 @import url('https://fonts.googleapis.com/css2?family=Itim&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap');
 
@@ -40,7 +41,7 @@ i {
 
 .app {
   width: 400px;
-  max-height: 400px;
+  max-height: 500px;
   
   display: flex;
   flex-direction: column;
